2025-09-03T12:27:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17433413998 # 1200
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-03
* notice: last 14d: unq all: 8 22
* notice: prev accum: outdated-unq outdated-all / unq all: 2909 5290 / 2928 5310
* notice: next accum: outdated-unq outdated-all / unq all: 2909 5290 / 2930 5312
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-09-03]

2025-09-03T01:02:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17419939476 # 1199
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-03
* notice: last 14d: unq all: 7 20
* notice: prev accum: outdated-unq outdated-all / unq all: 2906 5287 / 2927 5309
* notice: next accum: outdated-unq outdated-all / unq all: 2909 5290 / 2928 5310
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-19] / [2025-09-02]

2025-09-01T12:29:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17377634568 # 1196
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-01
* notice: last 14d: unq all: 9 22
* notice: prev accum: outdated-unq outdated-all / unq all: 2902 5282 / 2926 5308
* notice: next accum: outdated-unq outdated-all / unq all: 2906 5287 / 2927 5309
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-18] / [2025-09-01]

2025-09-01T01:16:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17364969808 # 1195