@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-09-03T12:27:49Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "timestamp" : "2025-09-04T01:01:58Z",
+  "count" : 3,
+  "count_minmax" : [ 2, 3 ],
+  "count_decinc" : [ -0, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
