@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-03T12:27:49Z",
-  "count_outdated" : 5290,
-  "uniques_outdated" : 2909,
-  "count" : 5312,
+  "timestamp" : "2025-09-04T01:01:58Z",
+  "count_outdated" : 5291,
+  "uniques_outdated" : 2910,
+  "count" : 5313,
   "uniques" : 2930,
   "clones" : [
-    {
-      "timestamp": "2025-08-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-22T00:00:00Z",
       "count": 2,
@@ -115,9 +106,9 @@
     },
     {
       "timestamp": "2025-09-03T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
