@@ -3,11 +3,6 @@
   "uniques": 8,
   "clones": [
     {
-      "timestamp": "2025-08-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-08-22T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2025-09-03T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
